@@ -134,9 +134,14 @@ class FRSFile extends Error {
 		$file_location=escapeshellcmd($file_location);
 		$newfilelocation = $GLOBALS['sys_upload_dir'].$this->FRSRelease->FRSPackage->Group->getUnixName().'/';
 
-		system("/bin/mkdir $newfilelocation");
-		system("/bin/mkdir $newfilelocation");
-		system("/bin/mv $file_location $newfilelocation$name");
+		exec("/bin/mkdir $newfilelocation",$out);
+		//print_r($out);
+		exec("/bin/mkdir $newfilelocation",$out);
+		//print_r($out);
+		$cmd="/bin/mv $file_location $newfilelocation$name";
+		exec($cmd,$out);
+		//echo $cmd;
+		//print_r($out);
 		if (!file_exists("$newfilelocation$name")) {
 			$this->setError($Language->getText('frs_file','error_cannot_move').':'.$newfilelocation.$name);
 			return false;
