@@ -1724,6 +1724,8 @@ project_admin_qrs	required_processor_type	Must select a processor type.
 project_admin_qrs	required_release_name	Must define a release name. 
 project_admin_qrs	title	Quick Release System
 project_admin_qrs	upload_new_file	Upload a new file
+project_admin_qrs	ftpupload_new_file	Alternatively, you can use FTP to upload a new file at $1
+project_admin_qrs	ftpupload_choosefile	Choose an FTP file instead of uploading:
 project_admin_qrs	exceed_file_size	The uploaded file exceeds the maximum file size. Contact to the site admin to upload this big file.
 project_admin_qrs	partial_file	The uploaded file was only partially uploaded.
 project_admin_qrs	unknown_file_error	Unknown file upload error.
